Fixed Headphone issue

--- a/JetSetRadioLive/app/src/main/AndroidManifest.xml
+++ b/JetSetRadioLive/app/src/main/AndroidManifest.xml
@@ -31,12 +31,19 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:launchMode="singleInstance">
             <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+                <action android:name="android.media.AUDIO_BECOMING_NOISY" />
+                <action android:name="android.media.browse.MediaBrowserService" />
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+                <action android:name="android.media.AUDIO_BECOMING_NOISY" />
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="io.fabric.ApiKey"
@@ -46,10 +53,6 @@
             android:name=".MediaPlayerS"
             android:enabled="true"
             android:exported="true" />
-        <service
-            android:name=".RadioServ"
-            android:enabled="true"
-            android:exported="true"></service>
     </application>
 
 </manifest>
