Added Notification Bar

--- a/JetSetRadioLive/app/src/main/AndroidManifest.xml
+++ b/JetSetRadioLive/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
             android:name=".MediaPlayerS"
             android:enabled="true"
             android:exported="true" />
+        <service
+            android:name=".NotificationService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
