--- a/JetSetRadioLive/gradle.properties
+++ b/JetSetRadioLive/gradle.properties
@@ -11,4 +11,5 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#org.gradle.configureondemand=false
 org.gradle.jvmargs=-XX\:MaxHeapSize\=256m -Xmx256m
