--- a/JSRL/app/src/main/AndroidManifest.xml
+++ b/JSRL/app/src/main/AndroidManifest.xml
@@ -10,21 +10,22 @@
 
     <application
         android:name=".MediaApplication"
-        android:allowBackup="true"
         android:icon="@mipmap/profk"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/profk"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity">
+            android:name=".SplashActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
 
         <service android:name=".service.MusicService">
             <intent-filter>
