--- a/JSRL/app/build.gradle
+++ b/JSRL/app/build.gradle
@@ -22,8 +22,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    //GSON
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    //GSON (json parser)
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //UI
@@ -33,10 +33,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0'
 
+    implementation 'com.felipecsl:gifimageview:2.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     //Slider
     implementation 'com.github.devlight:infinitecycleviewpager:1.0.2'
 
-
+    implementation 'androidx.core:core:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
 
@@ -47,7 +49,16 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-rc03'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc03'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //Coroutine for job and thread handling
+    def coroutines_version = "1.2.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation 'org.sufficientlysecure:html-textview:3.9'
+    //HTML parser
+    implementation 'org.jsoup:jsoup:1.10.3'
 }
+
 repositories {
     mavenCentral()
 }
