--- a/JSRL/app/build.gradle
+++ b/JSRL/app/build.gradle
@@ -22,22 +22,30 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //Image loading library
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+
     //GSON (json parser)
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    // Gif loader
+    implementation 'com.felipecsl:gifimageview:2.1.0'
+
+    // Network connection library
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+
     //UI
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.google.android.material:material:1.2.0'
 
-    implementation 'com.felipecsl:gifimageview:2.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+
     //Slider
     implementation 'com.github.devlight:infinitecycleviewpager:1.0.2'
 
+    //Core libs
     implementation 'androidx.core:core:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
@@ -55,6 +63,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation 'org.sufficientlysecure:html-textview:3.9'
+
     //HTML parser
     implementation 'org.jsoup:jsoup:1.10.3'
 }
