--- a/JSRL/app/src/main/AndroidManifest.xml
+++ b/JSRL/app/src/main/AndroidManifest.xml
@@ -22,16 +22,18 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
-<!--        <receiver android:name=".MainActivity">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.HEADSET_PLUG"/>-->
-<!--            </intent-filter>-->
-<!--        </receiver>-->
+        <service
+            android:name=".service.HeadphoneBroadcastReceiver"
+            android:enabled="true"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="initialiseHeadsetService" />
+            </intent-filter>
+        </service>
         <service android:name=".service.MusicService">
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService" />
